--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3250,5 +3250,5 @@ input, select, textarea {
 
 .years tr td:nth-child(2n) {
 	text-align: right;
-	font-weight: bold;
+	/*font-weight: bold;*/
 }
