--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3252,3 +3252,66 @@ input, select, textarea {
 	text-align: right;
 	/*font-weight: bold;*/
 }
+
+.research-table {
+	line-height: 1.5em;
+}
+
+.research-table tr {
+	border: none;
+}
+
+.research-table td {
+	background-color: #ffffff;
+	border: none;
+	border-image-width: 0;
+	vertical-align: middle;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+}
+
+.research-table td:nth-child(2n+1) {
+	padding-right: 20px;
+}
+
+.research-table td:nth-child(2n) {
+
+}
+
+#main h1 {
+	text-align: center;
+	padding-top: 2.5em;
+}
+
+
+
+.research-box {
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+.research-image {
+	width: 12em;
+	height: 12em;
+	top: 0;
+	left: 0;
+}
+
+.research-image-blue {
+
+}
+
+.research-image-grey {
+	position: absolute;
+	transition: opacity 0.25s ease-out;
+	-moz-transition: opacity .25s ease-out;
+	-webkit-transition: opacity .25s ease-out;
+	-o-transition: opacity .25s ease-out;
+	border-radius: 100%;
+}
+
+.research-image-grey:hover {
+	opacity: 0;
+}
