--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2590,7 +2590,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #001f2f;
+		background-color: #0d0d0d;
 		background-attachment: scroll,								scroll;
 		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
 		background-position: top left,							top left;
