--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3371,7 +3371,11 @@ input, select, textarea {
 	}
 
 	.press img {
-		opacity: 0.5;
+		opacity: 0.75;
+	}
+
+	.press td {
+		padding-left: 0px !important;
 	}
 }
 
@@ -3483,7 +3487,7 @@ h1 {
 
 .highlight-image {
 	width: max(18%, 120px);
-	opacity: 50%;
+	opacity: 75%;
 	padding-right: 40px;
 	padding-left: 0px;
 	padding-bottom: 20px;
