--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3390,6 +3390,7 @@ input, select, textarea {
 	/*text-align: justify;*/
 	padding-top: 30px;
 	padding-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 /* Button formatting */
@@ -3474,7 +3475,7 @@ h1 {
 }
 
 .highlight-text {
-	margin-bottom: 10px;
+	margin-bottom: 50px;
 }
 
 .highlight-link {
@@ -3484,9 +3485,14 @@ h1 {
 .highlight-image {
 	width: max(18%, 120px);
 	opacity: 75%;
-	padding-right: 40px;
-	padding-left: 0px;
-	padding-bottom: 5px;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-bottom: 15px;
+	padding-top: 10px;
+}
+
+.highlight-image-container {
+	text-align: center;
 }
 
 .highlight-image:hover {
