--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3253,12 +3253,10 @@ input, select, textarea {
 .years tr td:nth-child(2n) {
 	text-align: right;
 	padding-left: 50px;
-	/*font-weight: bold;*/
 }
 
 .years h3 {
 	margin-bottom: 0px;
-	/*font-weight: bold;*/
 }
 
 /*The table containing the research circles. */
@@ -3360,12 +3358,6 @@ input, select, textarea {
 
 }
 
-/* Button formatting */
-
-.actions-top {
-	/*padding-bottom: 150px;*/
-}
-
 .actions-top span {
 	padding-right: 10px;
 }
@@ -3428,8 +3420,26 @@ input, select, textarea {
 	font-size: 3em;
 	font-family: var(--heading-font-family);
 	color: var(--highlight-color);
-
 }
+
+@media screen and (max-width: 650px) {
+	.my-name {
+		font-size: 2.4em;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.my-name {
+		font-size: 2em;
+	}
+}
+
+@media screen and (max-width: 420px) {
+	.my-name {
+		font-size: 1.5em;
+	}
+}
+
 .my-name-slug {
 	color: var(--text-color);
 	font-size: 1em;
@@ -3474,15 +3484,8 @@ h1 {
 	}
 }
 
-/*@media screen and (max-width: 500px) {*/
-
-/*}*/
-
-
-
 /* https://codepen.io/sosuke/pen/Pjoqqp */
 .highlight-image:hover {
-	/*filter: invert(76%) sepia(78%) saturate(2947%) hue-rotate(345deg) brightness(99%) contrast(97%);*/
 	opacity: 100%;
 }
 
@@ -3522,9 +3525,6 @@ h1 {
 
 .image-table {
 	background-color: transparent;
-	/*margin-top: 30px;*/
-	/*padding-top: 10px;*/
-	/*margin-bottom: 100px;*/
 }
 
 .image-table tr {
@@ -3549,6 +3549,18 @@ h1 {
 	left: 0;
 	padding-top: 0px;
 	padding-left: 0px;
+}
+
+@media screen and (max-width: 550px) {
+	.image-table td:nth-child(2n+1) {
+		margin-bottom: 25px;
+		margin-top: 10px;
+		margin-right: 50px;
+		margin-left: 50px;
+	}
+	h3 {
+		text-align: center;
+	}
 }
 
 /* Text side */
@@ -3636,6 +3648,14 @@ h1:before {
 h1:after {
 	margin-left: 30px
 }
+
+/* Collapse header */
+@media screen and (max-width: 500px) {
+	.my-name {
+		font-size: 2em;
+	}
+}
+
 
 /* Color variables */
 :root {
