--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3656,6 +3656,24 @@ h1:after {
 	}
 }
 
+/* Video */
+.video-container {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+	/*pointer-events: none;*/
+}
+
+.video-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
 /* Color variables */
 :root {
 	--highlight-color: #f8981d;
