--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url("fontawesome-all.min.css");
 
 /* Google Fonts ( */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Source+Sans+Pro:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400&family=Source+Sans+Pro:wght@300;400&display=swap');
 
 /*
 	Strata by HTML5 UP
@@ -3626,10 +3626,23 @@ h1 {
 	color: var(--highlight-color);
 	text-align: right;
 	font-style: var(--heading-font-family);
+	white-space: nowrap;
 }
 
 .experience-heading {
 	padding-top: 75px;
+}
+
+.video-caption {
+	background-color: rgb(26, 26, 26);
+	padding-top: 30px;
+	padding-bottom: 30px;
+	padding-left: 30px;
+	padding-right: 30px;
+	font-family: var(--heading-font-family);
+	font-size: 12pt;
+	font-weight: 200;
+	line-height: 1.5em;
 }
 
 h1 {
